--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@ layout: default
 <section class="indexContent2">
   <p> {{- site.indexParagraph2 -}} </p>
 </section>
-<section class="indexContent2-5"></section>
-  <p> {{- site.indexParagraph2-5 -}} </p>
+<!--
+<section class="indexContent3"></section>
+  <p> {{- site.indexParagraph3 -}} </p>
 </section>
+-->
 
 {% for section in site.sections %}
   {% if section.video==false %}
