--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ layout: default
 <section class="indexContent">
   <p> {{- site.indexParagraph1 -}} </p>
 </section>
+<section class="indexContent">
+  <p> {{- site.indexParagraph1-5 -}} </p>
+</section>
 
 <div class="sliderContainer" style="position: relative">
   <div id="slider">
@@ -33,9 +36,6 @@ layout: default
 
 <section class="indexContent2">
   <p> {{- site.indexParagraph2 -}} </p>
-</section>
-<section class="indexContent3"></section>
-  <p> {{- site.indexParagraph3 -}} </p>
 </section>
 
 {% for section in site.sections %}
